# pokemon-meta-tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/processed/: pokemon_clean.parquet  pokemon_featured.parquet  pokemon_with_tiers.parquet
data/raw/: pokemon_abilities.csv  pokemon_abilities_scored.csv  pokemon_data.csv
models/: xgboost_tier_classifier.pkl  xgboost_viability.pkl
notebooks/: 01_data_exploration.ipynb  03_ability_features.ipynb
src/: data_loader.py  feature_engineering.py  model.py  visualisations.py
