[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-meta-tracker"
version = "0.1.0"
description = "Tracks competitive meta shifts across Pokémon generations"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]